syntax = "proto3";

package zaciraci.native_token;

import "common.proto";

option go_package = "github.com/fathens/zaciraci/native_token";

// ネイティブトークンサービス
service NativeTokenService {
  // 残高取得
  rpc GetBalance(zaciraci.common.Empty) returns (BalanceResponse);
  
  // 送金
  rpc Transfer(TransferRequest) returns (TransferResponse);
}

// 残高レスポンス
message BalanceResponse {
  string balance = 1;
}

// 送金リクエスト
message TransferRequest {
  string receiver = 1;
  string amount = 2;
}

// 送金レスポンス
message TransferResponse {
  bool success = 1;
  string transaction_hash = 2;
}
